# ci-v

./: .gitignore  Cargo.toml  README.md
civ-protocol/: Cargo.toml
civ-protocol/src/: bcd.rs  error.rs  gps.rs  lib.rs  radio.rs
civ-protocol/src/transport/: mod.rs  serial.rs
civ-tui/: Cargo.toml
civ-tui/src/: app.rs  event.rs  main.rs  message.rs  radio_task.rs  ui.rs
civ-web/: Cargo.toml  civ-web.js  index.html  style.css
civ-web/src/: lib.rs
src/: command.rs  error.rs  frequency.rs  lib.rs  main.rs  mode.rs  port.rs  protocol.rs  radio.rs  response.rs
src/tui/: app.rs  event.rs  message.rs  mod.rs  radio_task.rs  ui.rs
