[package]
name = "civ-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "civ-web-server"
path = "src/bin/serve.rs"
required-features = ["serve"]

[features]
serve = ["dep:tiny_http"]

[dependencies]
civ-protocol = { path = "../civ-protocol", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
tiny_http = { version = "0.12", optional = true }
